--- a/Spring/SpringBoots/切换运行环境.md
+++ b/Spring/SpringBoots/切换运行环境.md
@@ -6,9 +6,9 @@ spring:
 ```
 
 运行时一定要在命令中加入指定active的参数，否则会直接把`'@environment@'`当做环境配置，会读取不到`application-xx.yml` 
-1. Maven启动指定Profile通过-P，如mvn spring-boot:run -Ptest，但这是Maven的Profile。
+1. 如果使用命令行直接运行jar文件，则使用java -jar -Dspring.profiles.active=test demo-0.0.1-SNAPSHOT.jar
 2. 如果要指定spring-boot的spring.profiles.active，则必须使用mvn spring-boot:run -Drun.profiles=test
-3. 如果使用命令行直接运行jar文件，则使用java -jar -Dspring.profiles.active=test demo-0.0.1-SNAPSHOT.jar
+3. Maven启动指定Profile通过-P，如mvn spring-boot:run -Ptest，但这是Maven的Profile
 4. 如果使用开发工具，运行Application.java文件启动，则增加参数--spring.profiles.active=test
 
 
