--- a/Spring/SpringBoots/切换运行环境.md
+++ b/Spring/SpringBoots/切换运行环境.md
@@ -11,6 +11,14 @@ spring:
 3. Maven启动指定Profile通过-P，如mvn spring-boot:run -Ptest，但这是Maven的Profile
 4. 如果使用开发工具，运行Application.java文件启动，则增加参数--spring.profiles.active=test
 
+springboot服务读取配置文件具有优先级：
+1. **jar包所在目录**中的`/config`文件夹下的配置文件
+2. **jar包所在目录**同级的配置文件
+3. **jar包内**classes目录中的/config文件夹下的配置文件，对应开发时resource目录下的config文件夹下的配置文件
+4. **jar包内**classes目录中的配置文件，对应开发时resource目录下的配置文件
+
+springboot服务启动时会**按优先级搜寻所有的配置文件**，而**不是搜寻到就停止搜寻**了；这意味着：**所有配置文件中的属性配置都会被 springboot服务读取并使用到；且当这些配置文件中具有相同属性配置时，优先级高的配置文件中的属性配置会覆盖优先级低的**
+
 
 # Maven打包切换
 ```xml
