docs(消息队列): 添加消息顺序消费通用方案

--- a/中间件/消息队列.md
+++ b/中间件/消息队列.md
@@ -323,3 +323,26 @@ sudo rabbitmqctl start_app
 # RocketMQ
 
 
+
+
+# 消息顺序消费通用方案
+消息顺序消费即消费顺序与投递顺序一致，如发送消息为1、2、3、4、5，消费消息的顺序也要是1、2、3、4、5。
+
+实现思路（2种方案）：
+1. 生产者串行发送+同一个队列+消费者单线程消费
+2. 生产方消息带上连续递增序号+同一个队列+消费按编号顺序消费消息
+
+## 方案一：生产者串行发送+同一个队列+消费者单线程消费
+**生产者串行发送消息**
+- 使用分布式锁，让消息投递串行执行
+- 确保顺序消息到达同一个队列
+**消费者单线程消费消息**
+- 拉取一个消费一个，消费完再拉取下一个
+
+## 方案二：生产方消息带上连续递增序号+同一个队列+消费按编号顺序消费消息
+**生产方消息带上连续递增序号**
+- 顺序消息携带连续递增的编号，从1开始，连续递增
+- 确保顺序消息到达同一个队列
+**消费按编号顺序消费消息**
+- 消费方需要记录消息消费的位置：当前轮到哪个编号的消息
+- 收到消息后，将消息的编号和当前消息的位置对比下，是不是轮到这条消息了，如果是则进行消费，如果不是则排队等待，等待前一个到达之后且消费成功后唤醒自己进行消费
